--- a/recipe/client/src/App.css
+++ b/recipe/client/src/App.css
@@ -1,14 +1,13 @@
 .App {
   text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.recipe-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 400px;
+  margin: 2rem auto;
+}
+.recipe-form input,
+textarea {
+  margin: 1rem 0;
 }
